--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   rxdart: ^0.22.0
-  dio:
-  flutter_svg:
+  dio: 3.0.9
+  flutter_svg: ^0.18.0
 
 dev_dependencies:
   flutter_test:
